@@ -61,10 +61,10 @@ void sanitize_filename(char *f);
 
 void sanitize_filepath(char *f);
 
-void get_unique_filename(char **file, const char *ext);
+void get_unique_filename(char **file, const char *ext, int unique);
 
-char * get_unique_path(char *dir, char *file, const char *ext);
+char * get_unique_path(char *dir, char *file, const char *ext, int unique);
 
-void get_unique_dir(char *device, char **dir);
+void get_unique_dir(char *device, char **dir, int unique);
 
 #endif
