@@ -53,6 +53,7 @@
 extern scarletbook_format_handler_t const * dsdiff_format_fn(void);
 extern scarletbook_format_handler_t const * dsdiff_edit_master_format_fn(void);
 extern scarletbook_format_handler_t const * dsf_format_fn(void);
+extern scarletbook_format_handler_t const * dsf_edit_master_format_fn(void);
 extern scarletbook_format_handler_t const * iso_format_fn(void);
 
 typedef const scarletbook_format_handler_t *(*sacd_output_format_fn_t)(void); 
@@ -61,6 +62,7 @@ static sacd_output_format_fn_t s_sacd_output_format_fns[] =
     dsdiff_format_fn,
     dsdiff_edit_master_format_fn,
     dsf_format_fn,
+    dsf_edit_master_format_fn,
     iso_format_fn,
     NULL
 }; 
