@@ -16,6 +16,12 @@ Disclaimer
 What this is
 ============
 
+This is a fork of setmind/sacd-ripper some additional features:
+  - option to disable cuesheet BOM
+  - option to extract preferred channel conf. (multi channel over two channel, or vica-versa)
+  - option to overwrite output files instead to add " (1)", " (2)", etc to file/directory names
+  - option to extract one DSF file with cuesheet (similar to DFF)
+
 This is a fork of sacd-ripper/sacd-ripper.  For original release documents, please refer to https://github.com/sacd-ripper/sacd-ripper .  This fork focuses only on improvement of sacd_extract, so most of the irrelevant codes have been removed.
 
 This fork adds the following additional features to the original sacd_extract.
